# twitter-content-engine

./: .env.example  .gitignore  README.md  config.example.json  config.json  first_run.py  pyproject.toml  setup.bat  setup.command
.claude/: CLAUDE.md
dashboard/: app.js  index.html  styles.css
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  INTERVIEW-QA.md  OPERATIONS.md  competitive-benchmark-sud.md
docs/playbooks/: twitter-playbook-sud.md  voice-playbook-sud.md  x-posts-strategy-sud.md
docs/superpowers/plans/: 2026-03-23-multi-pillar-generation.md  2026-04-06-scoring-model-overhaul.md
docs/superpowers/specs/: 2026-03-23-multi-pillar-generation-design.md  2026-04-06-scoring-model-overhaul-design.md
scripts/: archive_analyzer.py  benchmark_analyzer.py  cadence.py  config_loader.py  content_generator.py  llm_client.py  notifier.py  performance_analyzer.py  playbook_refresher.py  post_queue.py  post_scorer.py  scheduler.py  server.py  spike_detector.py  trend_scanner.py  velocity_monitor.py  x_publisher.py
tests/: test_archive_analyzer.py  test_benchmark_analyzer.py  test_cadence.py  test_content_generator.py  test_llm_client.py  test_performance_analyzer.py  test_playbook_refresher.py  test_post_scorer.py  test_queue.py  test_scheduler.py  test_server.py  test_server_performance.py  test_spike_detector.py  test_trend_scanner.py  test_velocity_monitor.py  test_x_publisher.py
tests/fixtures/: sample_tweets.js
